--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,30 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+		<!-- 써머노트 -->
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+          <!-- 대용량 파일 처리 -->
+          <dependency>
+              <groupId>commons-io</groupId>
+              <artifactId>commons-io</artifactId>
+              <version>2.6</version>
+          </dependency>
+		
+          <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+          <!-- json 변환 -->
+          <dependency>
+              <groupId>com.google.code.gson</groupId>
+              <artifactId>gson</artifactId>
+              <version>2.8.6</version>
+          </dependency>
+
+          <!-- commons-fileupload -->
+          <!-- multipart등을 사용할수 있음 -->
+          <dependency>
+              <groupId>commons-fileupload</groupId>
+              <artifactId>commons-fileupload</artifactId>
+              <version>1.3.1</version>
+          </dependency>
 		
 	</dependencies>
 
