--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.datasource.password=wanza
 
 # DEVTOOLS (DevToolsProperties) refresh
 spring.devtools.livereload.enabled=true
+
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+server.tomcat.max-http-form-post-size=50MB
+
