--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,13 @@
               <artifactId>commons-fileupload</artifactId>
               <version>1.3.1</version>
           </dependency>
+          
+          <!-- JSON객체 파싱에 유용한 Gson 외부 라이브러리 Dependency -->
+          <dependency>
+			  <groupId>com.google.code.gson</groupId>
+			  <artifactId>gson</artifactId>
+			  <version>2.8.5</version>
+		  </dependency>
 		
 	</dependencies>
 
