--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,16 @@ spring.datasource.password=wanza
 spring.devtools.livereload.enabled=true
 
 
+#파일 업로드 용량 제한
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 server.tomcat.max-http-form-post-size=50MB
 
+
+#smtp 이메일 인증
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bit210324@gmail.com
+spring.mail.password=bitcamp0324
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
