--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,15 @@
 			  <artifactId>gson</artifactId>
 			  <version>2.8.5</version>
 		  </dependency>
+		  
+		<!-- 자바 메일 인증 -->		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.2.8.RELEASE</version>
+		</dependency>
+		
+		
 		
 	</dependencies>
 
