--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=3000
 
 #DB set
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.0.231:1521:xe
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@192.168.0.231:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=wanza
 spring.datasource.password=wanza
 
