--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
 		</dependency>
 		
 		
+		<!-- XSS lucy-xss-servlet-filter -->
+		<dependency>
+			<groupId>com.navercorp.lucy</groupId>
+			<artifactId>lucy-xss-servlet</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 		
 		
 	</dependencies>
